# zargunlite

./: README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
src/zargunlite/: core.py  default_config.py  model.py
tests/: test_core.py
